// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberCard /> renders correctly with detail actions 1`] = `
<div
  className="number-card w-100 has-details"
>
  <div
    className="card test-class"
  >
    <div
      className="card-body"
    >
      <h3
        className="card-title d-flex align-items-center justify-content-between"
      >
        <span>
          10
        </span>
        <span
          aria-hidden={true}
          className="d-flex align-items-center justify-content-center fa fa-users"
          id="Icon2"
        />
      </h3>
      <p
        className="card-text"
      >
        This describes the data!
      </p>
    </div>
  </div>
  <div
    className="card-footer"
  >
    <div
      className="footer-title"
    >
      <button
        aria-controls="footer-body-test-id"
        aria-expanded={false}
        className="btn toggle-collapse btn-link btn-block"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <div
            className="details-btn-text"
          >
            Details
          </div>
          <div>
            <span
              aria-hidden={true}
              className="fa fa-caret-down"
              id="Icon3"
            />
            <span
              className="sr-only"
            >
              Show details
            </span>
          </div>
        </div>
      </button>
    </div>
    <div
      className="footer-body mt-1 d-none"
      id="footer-body-test-id"
    >
      <a
        className="btn btn-link"
        href="/action-1"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <span
            className="label"
          >
            Action 1
          </span>
        </div>
      </a>
      <a
        className="btn btn-link"
        href="/action-2"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <span
            className="label"
          >
            Action 2
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<NumberCard /> renders correctly without detail actions 1`] = `
<div
  className="number-card w-100"
>
  <div
    className="card test-class"
  >
    <div
      className="card-body"
    >
      <h3
        className="card-title d-flex align-items-center justify-content-between"
      >
        <span>
          10
        </span>
        <span
          aria-hidden={true}
          className="d-flex align-items-center justify-content-center fa fa-users"
          id="Icon1"
        />
      </h3>
      <p
        className="card-text"
      >
        This describes the data!
      </p>
    </div>
  </div>
</div>
`;
